--- a/notebooks/huggingface.ipynb
+++ b/notebooks/huggingface.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Text 2 Speech using Huggingface\n"
+    "# Text-2-Speech using Huggingface\n"
    ],
    "metadata": {
     "collapsed": false
