--- a/notebooks/aws.ipynb
+++ b/notebooks/aws.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Text-2-Speech using Amazon Polly"
+    "# Text-2-Speech using Amazon Polly\n",
+    "[Amazon Polly](https://eu-central-1.console.aws.amazon.com/polly/home/SynthesizeSpeech)"
    ],
    "metadata": {
     "collapsed": false
@@ -104,7 +105,7 @@
    "cell_type": "markdown",
    "source": [
     "# Synthesize Speech\n",
-    "Difference between standard and neural voices: https://docs.aws.amazon.com/polly/latest/dg/NTTS-main.html\n",
+    "[Difference between standard and neural voices](https://docs.aws.amazon.com/polly/latest/dg/NTTS-main.html)\n",
     "tl;dr: \"NTTS is ground-breaking improvements in speech quality through a new machine learning approach\""
    ],
    "metadata": {
